--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: # the website title (if blank, full name will be used instead)
+title: TCL # the website title (if blank, full name will be used instead)
 first_name: Theodore
 middle_name: C.
 last_name: Lim
